unpackaged/main/default/objects/Account/fields/Dassault_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Customer_Status__c</fullName>
    <inlineHelpText>Active Client: Customer with at least one licence in the installed base ‘Active with Support’ where new licenses have been sold in the last 3 years.
Dormant Client: Customer with at least one licence in the Installed base ‘Active with Support’ where no new licenses have been sold in the last 3 years.
Inactive Client: Customer with only licenses in the Installed base ‘Active Without Support’ and where the max of the Licenses ‘Active Without Support’ end date is older than 3 months.</inlineHelpText>
    <label>Dassault Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Client</fullName>
            </value>
            <value>
                <fullName>Dormant Client</fullName>
            </value>
            <value>
                <fullName>Inactive Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>