unpackaged/main/default/objects/Account/fields/Dassault_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Customer_Type__c</fullName>
    <label>Dassault Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Ex-Customer</fullName>
            </value>
            <value>
                <fullName>Dormant TOS</fullName>
            </value>
            <value>
                <fullName>Dormant STOP</fullName>
            </value>
            <value>
                <fullName>Dormant SOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>