unpackaged/main/default/objects/Account/fields/Dassault_Industry__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Industry__c</fullName>
    <label>Dassault Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace &amp; Defence</fullName>
            </value>
            <value>
                <fullName>AEC</fullName>
            </value>
            <value>
                <fullName>Consumer Goods/Retail</fullName>
            </value>
            <value>
                <fullName>Consumer Packaged Goods/Retail</fullName>
            </value>
            <value>
                <fullName>Energy, Process &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Financial and Business Services</fullName>
            </value>
            <value>
                <fullName>High-Tech</fullName>
            </value>
            <value>
                <fullName>Industrial Equipment</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Marine &amp; Offshore</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
            <value>
                <fullName>Transport and Mobility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>