unpackaged/main/default/objects/Account/fields/Dassault_Passport_Credits_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Passport_Credits_Purchased__c</fullName>
    <label>Dassault Passport Credits Purchased</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>