unpackaged/main/default/objects/Account/fields/Dassault_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Site_ID__c</fullName>
    <label>Dassault Site ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>