unpackaged/main/default/objects/Account/fields/Dassault_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Sub_Industry__c</fullName>
    <label>Dassault Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TM Supplier</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Fabrication_Metal_Plastic_Products</fullName>
                <label>Fabrication Metal Plastic Products</label>
            </value>
            <value>
                <fullName>Aero Supplier</fullName>
            </value>
            <value>
                <fullName>Specialist Manufacturing</fullName>
            </value>
            <value>
                <fullName>Trains</fullName>
            </value>
            <value>
                <fullName>Robot Machine Tools 3D Print</fullName>
            </value>
            <value>
                <fullName>Airframe OEM</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Power Fluidic Equipment</fullName>
            </value>
            <value>
                <fullName>Media Entertainment</fullName>
            </value>
            <value>
                <fullName>Tyre Manufacturer</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Car / Light truck OEM</fullName>
            </value>
            <value>
                <fullName>Home or Garden</fullName>
            </value>
            <value>
                <fullName>Computing Equipment</fullName>
            </value>
            <value>
                <fullName>Transport Systems Management</fullName>
            </value>
            <value>
                <fullName>Marine Offshore Specialist</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Racing Cars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>