unpackaged/main/default/objects/Account/fields/Dassault_Technical_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Technical_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dassault Technical Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>