unpackaged/main/default/objects/Account/fields/Data_Services_Customer__c.field-meta.xml
<CustomField>
    <fullName>Data_Services_Customer__c</fullName>
    <label>Data Services Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>