unpackaged/main/default/objects/Account/fields/Deactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_By__c</fullName>
    <description>Field to capture who deactivated the supplier org from enerjyhub.</description>
    <inlineHelpText>Field to capture who deactivated the supplier org from enerjyhub.</inlineHelpText>
    <label>Deactivated By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>