unpackaged/main/default/objects/Account/fields/Debtor_Category__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Category__c</fullName>
    <label>Debtor Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>