unpackaged/main/default/objects/Account/fields/Debtor_Category_V2__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Category_V2__c</fullName>
    <label>Debtor Category V2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Time Good Payer</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Intense Persistent Chasing Required</fullName>
            </value>
            <value>
                <fullName>90 Day or Above Terms</fullName>
            </value>
            <value>
                <fullName>Bad Payers Bad Debt Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>