unpackaged/main/default/objects/Account/fields/Design_Authority__c.field-meta.xml
<CustomField>
    <fullName>Design_Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the account have a design authority in the UK?</inlineHelpText>
    <label>Design Authority</label>
    <type>Checkbox</type>
</CustomField>