unpackaged/main/default/objects/Account/fields/Design_CAD_Manager__c.field-meta.xml
<CustomField>
    <fullName>Design_CAD_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design/CAD Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Design/CAD Manager)</relationshipLabel>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>