unpackaged/main/default/objects/Account/fields/Design_in_the_UK__c.field-meta.xml
<CustomField>
    <fullName>Design_in_the_UK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design in the UK</label>
    <type>Checkbox</type>
</CustomField>