unpackaged/main/default/objects/Account/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to tie Account and DocuSign status together.</description>
    <label>DocuSign Status</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>