unpackaged/main/default/objects/Account/fields/DQAddressScore__c.field-meta.xml
<CustomField>
    <fullName>DQAddressScore__c</fullName>
    <formula>if(isblank(BillingStreet),0,0.5)
+ if(isblank(BillingCity),0,0.5)
+ if(isblank(BillingState),0,0.25)
+ if(isblank(BillingPostalCode),0,0.5)
+ if(isblank(BillingCountry),0,0.25)
+ if(isblank(ShippingStreet),0,0.5)
+ if(isblank(ShippingCity),0,0.5)
+ if(isblank(ShippingState),0,0.25)
+ if(isblank(ShippingPostalCode),0,0.5)
+ if(isblank(ShippingCountry),0,0.25)</formula>
    <label>Data Quality Address Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>