unpackaged/main/default/objects/Account/fields/DQScore__c.field-meta.xml
<CustomField>
    <fullName>DQScore__c</fullName>
    <formula>IF(DQScorePerc__c == 1, IMAGE("/img/samples/rating5.gif", ""),
IF(DQScorePerc__c &gt;= 0.5, IMAGE("/img/samples/rating4.gif", ""),
IMAGE("/img/samples/rating3.gif", "") ))+" "+TEXT((FLOOR((DQScorePerc__c*100))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data Quality Score out of 100, calculated based on data present in key fields.</inlineHelpText>
    <label>DQ Score</label>
    <type>Text</type>
</CustomField>