unpackaged/main/default/objects/Account/fields/DQScorePerc__c.field-meta.xml
<CustomField>
    <fullName>DQScorePerc__c</fullName>
    <formula>((
    DQAddressScore__c
/*  + if(ispickval(Industry,""),0,1)
  + if(isblank(TEXT(Rating)),0,1)
  + if(isblank(Website),0,1) */
  + if(isblank(Phone),0,1)
  + if(isblank(NumberOfEmployees),0,1)
  + if(isblank(Company_Number__c),0,1)
  + if(isblank(VAT_Number__c),0,1)
) / 8 )</formula>
    <label>Data Quality Score Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>