unpackaged/main/default/objects/Account/fields/DQScoreStatus__c.field-meta.xml
<CustomField>
    <fullName>DQScoreStatus__c</fullName>
    <formula>IF( DQScorePerc__c &gt;= 0.8, "Pass",
  "Fail"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Status</label>
    <type>Text</type>
</CustomField>