unpackaged/main/default/objects/Account/fields/Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Account</label>
    <type>Checkbox</type>
</CustomField>