unpackaged/main/default/objects/Account/fields/EES_110_Electrical_Distribution_System__c.field-meta.xml
<CustomField>
    <fullName>EES_110_Electrical_Distribution_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EES_110 - Electrical Distribution System</label>
    <type>Checkbox</type>
</CustomField>