unpackaged/main/default/objects/Account/fields/EES_200_Infotainment__c.field-meta.xml
<CustomField>
    <fullName>EES_200_Infotainment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EES_200 - Infotainment</label>
    <type>Checkbox</type>
</CustomField>