unpackaged/main/default/objects/Account/fields/EES_310_User_Controls_and_Driver_Info__c.field-meta.xml
<CustomField>
    <fullName>EES_310_User_Controls_and_Driver_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EES_310 - User Controls and Driver Info</label>
    <type>Checkbox</type>
</CustomField>