unpackaged/main/default/objects/Account/fields/EES_320_Advanced_Driver_Assistance_Sys__c.field-meta.xml
<CustomField>
    <fullName>EES_320_Advanced_Driver_Assistance_Sys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EES_320 - Advanced Driver Assistance Sys</label>
    <type>Checkbox</type>
</CustomField>