unpackaged/main/default/objects/Account/fields/EES_390_CORS_Comfort_Occupant_and_Rest__c.field-meta.xml
<CustomField>
    <fullName>EES_390_CORS_Comfort_Occupant_and_Rest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EES_390 - CORS Comfort Occupant and Rest</label>
    <type>Checkbox</type>
</CustomField>