unpackaged/main/default/objects/Account/fields/EES_500_Body_Electronics__c.field-meta.xml
<CustomField>
    <fullName>EES_500_Body_Electronics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EES_500 - Body Electronics</label>
    <type>Checkbox</type>
</CustomField>