unpackaged/main/default/objects/Account/fields/EES_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EES_Expiry_Date__c</fullName>
    <label>EES Expiry Date</label>
    <type>Date</type>
</CustomField>