unpackaged/main/default/objects/Account/fields/EES_Number__c.field-meta.xml
<CustomField>
    <fullName>EES_Number__c</fullName>
    <label>EES Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>