unpackaged/main/default/objects/Account/fields/Electrical__c.field-meta.xml
<CustomField>
    <fullName>Electrical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical</label>
    <type>Checkbox</type>
</CustomField>