unpackaged/main/default/objects/Account/fields/enerjyhubEscalationDateTrig__c.field-meta.xml
<CustomField>
    <fullName>enerjyhubEscalationDateTrig__c</fullName>
    <description>Displays the date when the enerjyhub escalation box was ticked (only set by Flow
BUTTON_Set_Account_Enerjyhub_Escalated)</description>
    <inlineHelpText>Date the parent account was escalated.</inlineHelpText>
    <label>enerjyhubEscalationDate</label>
    <type>Date</type>
</CustomField>