unpackaged/main/default/objects/Account/fields/Engineering_Manager__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Engineering Manager)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>