unpackaged/main/default/objects/Account/fields/ExistingDataTransferMethodPick__c.field-meta.xml
<CustomField>
    <fullName>ExistingDataTransferMethodPick__c</fullName>
    <label>Existing Data Transfer Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Commercial Web Based</fullName>
            </value>
            <value>
                <fullName>No core data transfer solution</fullName>
            </value>
            <value>
                <fullName>PLM Integrated</fullName>
            </value>
            <value>
                <fullName>Home Grown</fullName>
            </value>
            <value>
                <fullName>Customer Mandated</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>