unpackaged/main/default/objects/Account/fields/Export_related_data__c.field-meta.xml
<CustomField>
    <fullName>Export_related_data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Temporary field to help filter data export to migration org</inlineHelpText>
    <label>Export related data</label>
    <type>Checkbox</type>
</CustomField>