unpackaged/main/default/objects/Account/fields/FacebookLikes__c.field-meta.xml
<CustomField>
    <fullName>FacebookLikes__c</fullName>
    <label>Facebook Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>