unpackaged/main/default/objects/Account/fields/Final_Export__c.field-meta.xml
<CustomField>
    <fullName>Final_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Export</label>
    <type>Checkbox</type>
</CustomField>