unpackaged/main/default/objects/Account/fields/Finance_Director__c.field-meta.xml
<CustomField>
    <fullName>Finance_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Finance Director)</relationshipLabel>
    <relationshipName>AccountswgL7</relationshipName>
    <type>Lookup</type>
</CustomField>