unpackaged/main/default/objects/Account/fields/GooglePlusFollowers__c.field-meta.xml
<CustomField>
    <fullName>GooglePlusFollowers__c</fullName>
    <label>Google+ Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>