unpackaged/main/default/objects/Account/fields/GooglePlusURL__c.field-meta.xml
<CustomField>
    <fullName>GooglePlusURL__c</fullName>
    <label>Google+</label>
    <type>Url</type>
</CustomField>