unpackaged/main/default/objects/Account/fields/Has_subscription__c.field-meta.xml
<CustomField>
    <fullName>Has_subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user will check this checkbox if this account has a subscription to EnerjyHUB.</description>
    <label>Active in enerjyhub</label>
    <type>Checkbox</type>
</CustomField>