unpackaged/main/default/objects/Account/fields/HasSocialMedia__c.field-meta.xml
<CustomField>
    <fullName>HasSocialMedia__c</fullName>
    <formula>IF(ISBLANK(SocialMediaLastUpdated__c),
  "No",
  "Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Social Media</label>
    <type>Text</type>
</CustomField>