unpackaged/main/default/objects/Account/fields/IAG_Gatekeeper__c.field-meta.xml
<CustomField>
    <fullName>IAG_Gatekeeper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IAG Gatekeeper</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (IAG Gatekeeper)</relationshipLabel>
    <relationshipName>AccountsvKK2</relationshipName>
    <type>Lookup</type>
</CustomField>