unpackaged/main/default/objects/Account/fields/In_Active_Reason__c.field-meta.xml
<CustomField>
    <fullName>In_Active_Reason__c</fullName>
    <description>Reason if In-Active tick box has been ticked</description>
    <label>In-Active Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency only</fullName>
            </value>
            <value>
                <fullName>Site closed</fullName>
            </value>
            <value>
                <fullName>No JLR work</fullName>
            </value>
            <value>
                <fullName>General enerjyhub objection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>