unpackaged/main/default/objects/Account/fields/InActive_JLR_Site__c.field-meta.xml
<CustomField>
    <fullName>InActive_JLR_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an active JLR Supplier Site, default as unticked</description>
    <label>In-Active JLR Site</label>
    <type>Checkbox</type>
</CustomField>