unpackaged/main/default/objects/Account/fields/InActiveDate__c.field-meta.xml
<CustomField>
    <fullName>InActiveDate__c</fullName>
    <description>Capture date site account is marked as 'In-Active JLR Site' TRUE</description>
    <inlineHelpText>Date site account is marked 'In-Active JLR Site'.</inlineHelpText>
    <label>In-Active Date</label>
    <type>Date</type>
</CustomField>