unpackaged/main/default/objects/Account/fields/Inside_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For use by inside sales team only where account owner is a different individual. For example, when inside sales member is running a campaign for account owner.</inlineHelpText>
    <label>Inside Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>