unpackaged/main/default/objects/Account/fields/Install_Base__c.field-meta.xml
<CustomField>
    <fullName>Install_Base__c</fullName>
    <label>Install Base</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V5</fullName>
            </value>
            <value>
                <fullName>V6</fullName>
            </value>
            <value>
                <fullName>JLR BIW</fullName>
            </value>
            <value>
                <fullName>CAD-EXH</fullName>
            </value>
            <value>
                <fullName>No Install Base</fullName>
            </value>
            <value>
                <fullName>HD2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>