unpackaged/main/default/objects/Account/fields/Integration_Connectivity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Integration_Connectivity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration/Connectivity Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Integration/Connectivity Manager)</relationshipLabel>
    <relationshipName>AccountswgLH</relationshipName>
    <type>Lookup</type>
</CustomField>