unpackaged/main/default/objects/Account/fields/Is120__c.field-meta.xml
<CustomField>
    <fullName>Is120__c</fullName>
    <defaultValue>false</defaultValue>
    <label>120</label>
    <type>Checkbox</type>
</CustomField>