unpackaged/main/default/objects/Account/fields/Is732__c.field-meta.xml
<CustomField>
    <fullName>Is732__c</fullName>
    <defaultValue>false</defaultValue>
    <label>732</label>
    <type>Checkbox</type>
</CustomField>