unpackaged/main/default/objects/Account/fields/IsACC_VR11_Bypass__c.field-meta.xml
<CustomField>
    <fullName>IsACC_VR11_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox referenced in 'Site Account Auto Deactivation' flow to bypass ACC_VR11.</description>
    <inlineHelpText>Checkbox referenced in 'Site Account Auto Deactivation' flow to bypass ACC_VR11.</inlineHelpText>
    <label>ACC_VR11_Bypass</label>
    <type>Checkbox</type>
</CustomField>