unpackaged/main/default/objects/Account/fields/IsDassault_Account__c.field-meta.xml
<CustomField>
    <fullName>IsDassault_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dassault Account</label>
    <type>Checkbox</type>
</CustomField>