unpackaged/main/default/objects/Account/fields/IsEnerjyhubEscalated__c.field-meta.xml
<CustomField>
    <fullName>IsEnerjyhubEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to show whether or not the Business Account has refused to pay for enerjyhub subscription.  Will be checked if so.</description>
    <inlineHelpText>Tick this box if the Supplier has refused to buy a subscription and should be escalated to JLR.</inlineHelpText>
    <label>enerjyhub Escalated?</label>
    <type>Checkbox</type>
</CustomField>