unpackaged/main/default/objects/Account/fields/IsEnerjyhubExpired__c.field-meta.xml
<CustomField>
    <fullName>IsEnerjyhubExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked if the supplier has not renewed their subscription</description>
    <inlineHelpText>Is the enerjyhub subscription expired and not renewed</inlineHelpText>
    <label>enerjyhub Expired?</label>
    <type>Checkbox</type>
</CustomField>