unpackaged/main/default/objects/Account/fields/IsenerjyhubImmersionSetupComplete__c.field-meta.xml
<CustomField>
    <fullName>IsenerjyhubImmersionSetupComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify when GSI has completed enerjyhub intro immersion with supplier org.</description>
    <inlineHelpText>Supplier has completed enerjyhub introduction immersion with GSI.</inlineHelpText>
    <label>enerjyhub Immersion Setup Complete?</label>
    <type>Checkbox</type>
</CustomField>