unpackaged/main/default/objects/Account/fields/IsJLRParentAccountTemp__c.field-meta.xml
<CustomField>
    <fullName>IsJLRParentAccountTemp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsJLRParentAccountTemp</label>
    <type>Checkbox</type>
</CustomField>