unpackaged/main/default/objects/Account/fields/IsJLRSite__c.field-meta.xml
<CustomField>
    <fullName>IsJLRSite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsJLRSite</label>
    <type>Checkbox</type>
</CustomField>