unpackaged/main/default/objects/Account/fields/IsMajenta__c.field-meta.xml
<CustomField>
    <fullName>IsMajenta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Majenta</label>
    <type>Checkbox</type>
</CustomField>