unpackaged/main/default/objects/Account/fields/IsParentEnerjyhubEscalatedJLRAuto__c.field-meta.xml
<CustomField>
    <fullName>IsParentEnerjyhubEscalatedJLRAuto__c</fullName>
    <description>Check box to show if the parent account has refused to buy an enerjyhub subscription and has been escalated to JLR.  Will be checked if so.</description>
    <formula>if(Parent.IsEnerjyhubEscalated__c = true,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is ticked, the parent account has been escalated to JLR for refusal to buy an enerjyhub subscription.</inlineHelpText>
    <label>Parent enerjyhub Escalated?</label>
    <type>Checkbox</type>
</CustomField>